--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -96,10 +96,7 @@
                                 <input type="hidden" name="title" value={{ title }}>
                                 <input type="hidden" name="price" value={{ price }}>
                                 <input type="hidden" name="unit" value={{ unit }}>
-                                <script src="https://www.mercadopago.com.pe/integrations/v1/web-payment-checkout.js"
-                                    data-preference-id='<%= global.id %>'>
-                                    </script>
-                                <button type="submit" class="mercadopago-button" formmethod="post">Pagar</button>
+                                <button type="submit" class="mercadopago-button" formmethod="post">Pagar la compra</button>
                             </form>
                         </div>
                     </div>
