--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -385,7 +385,7 @@
                                     </div>
                                 </div>
                                 <form action="/detail" method="get">
-                                    <input type="hidden" name="img" value="./assets/u_10168742.jpg">
+                                    <input type="hidden" name="img" value="/assets/u_10168742.jpg">
                                     <input type="hidden" name="title" value="iPhone 8">
                                     <input type="hidden" name="price" value="16000">
                                     <input type="hidden" name="unit" value="1">
